wayland: Warn if a surface is being set while the pointer is invisible

This is an unexpected condition, better not to fall in it without further
indications.

Closes: https://gitlab.gnome.org/GNOME/mutter/issues/779